--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
+    "sha1": "^1.1.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
     "web3": "^1.6.0"
